# SwiftUsd-ast-answerer

./: ACKNOWLEDGEMENTS  CMakeLists.txt  CONTRIBUTING.md  DOC.md  LICENSE  NOTICE  README.md  SECURITY.md  analysis_change.py
resources/: test.cpp  testAPINotes.txt  testCMakeParser.txt  testComparable.txt  testCustomStringConvertible.txt  testEquatable.txt  testFindEnums.txt  testFindNamedDecls.txt  testFindSchemas.txt  testFindSendableDependencies.txt  testFindStaticTokens.txt  testFindTfNoticeSubclasses.txt  testFindVtValueRefFunctions.txt  testHashable.txt  testImport.txt  testPublicInheritance.txt  testSdfValueTypeNamesMembers.txt  testSendable.txt  testSwiftSubclassCxx.txt  testTypedef.txt
source/AnalysisPass/: APINotesAnalysisPass.cpp  APINotesAnalysisPass.h  ASTAnalysisPass.cpp  ASTAnalysisPass.h  ASTAnalysisRunner.cpp  ASTAnalysisRunner.h  BinaryOpProtocolAnalysisPassBase.cpp  BinaryOpProtocolAnalysisPassBase.h  ComparableAnalysisPass.cpp  ComparableAnalysisPass.h  CustomStringConvertibleAnalysisPass.cpp  CustomStringConvertibleAnalysisPass.h  EquatableAnalysisPass.cpp  EquatableAnalysisPass.h  FindEnumsAnalysisPass.cpp  FindEnumsAnalysisPass.h  FindNamedDeclsAnalysisPass.cpp  FindNamedDeclsAnalysisPass.h  FindSchemasAnalysisPass.cpp  FindSchemasAnalysisPass.h  FindSendableDependenciesAnalysisPass.cpp  FindSendableDependenciesAnalysisPass.h  FindStaticTokensAnalysisPass.cpp  FindStaticTokensAnalysisPass.h  FindTfNoticeSubclassesAnalysisPass.cpp  FindTfNoticeSubclassesAnalysisPass.h  FindVtValueRefFunctionsAnalysisPass.cpp  FindVtValueRefFunctionsAnalysisPass.h  HashableAnalysisPass.cpp  HashableAnalysisPass.h  ImportAnalysisPass.cpp  ImportAnalysisPass.h  PublicInheritanceAnalysisPass.cpp  PublicInheritanceAnalysisPass.h  SdfValueTypeNamesMembersAnalysisPass.cpp  SdfValueTypeNamesMembersAnalysisPass.h  SendableAnalysisPass.cpp  SendableAnalysisPass.h  SwiftSubclassCxxAnalysisPass.cpp  SwiftSubclassCxxAnalysisPass.h  (+2 more)
source/AnalysisResult/: APINotesAnalysisResult.cpp  APINotesAnalysisResult.h  BinaryOpProtocolAnalysisResult.cpp  BinaryOpProtocolAnalysisResult.h  CustomStringConvertibleAnalysisResult.cpp  CustomStringConvertibleAnalysisResult.h  FindEnumsAnalysisResult.cpp  FindEnumsAnalysisResult.h  FindNamedDeclsAnalysisResult.cpp  FindNamedDeclsAnalysisResult.h  FindSchemasAnalysisResult.cpp  FindSchemasAnalysisResult.h  FindSendableDependenciesAnalysisResult.cpp  FindSendableDependenciesAnalysisResult.h  FindStaticTokensAnalysisResult.cpp  FindStaticTokensAnalysisResult.h  FindTfNoticeSubclassesAnalysisResult.cpp  FindTfNoticeSubclassesAnalysisResult.h  FindVtValueRefFunctionsAnalysisResult.cpp  FindVtValueRefFunctionsAnalysisResult.h  HashableAnalysisResult.cpp  HashableAnalysisResult.h  ImportAnalysisResult.cpp  ImportAnalysisResult.h  PublicInheritanceAnalysisResult.cpp  PublicInheritanceAnalysisResult.h  SdfValueTypeNamesMembersAnalysisResult.cpp  SdfValueTypeNamesMembersAnalysisResult.h  SendableAnalysisResult.cpp  SendableAnalysisResult.h  SwiftSubclassCxxAnalysisResult.cpp  SwiftSubclassCxxAnalysisResult.h  TypedefAnalysisResult.cpp  TypedefAnalysisResult.h
source/CodeGen/: APINotesCodeGen.cpp  APINotesCodeGen.h  APINotesCodeGenNodes.cpp  APINotesCodeGenNodes.h  CodeGenBase.cpp  CodeGenBase.h  CodeGenRunner.cpp  CodeGenRunner.h  ComparableCodeGen.cpp  ComparableCodeGen.h  CustomStringConvertibleCodeGen.cpp  CustomStringConvertibleCodeGen.h  EnumsCodeGen.cpp  EnumsCodeGen.h  EquatableCodeGen.cpp  EquatableCodeGen.h  HashableCodeGen.cpp  HashableCodeGen.h  ModulemapCodeGen.cpp  ModulemapCodeGen.h  OpenUSDSwiftModuleCodeGen.cpp  OpenUSDSwiftModuleCodeGen.h  ReferenceTypeConformanceCodeGen.cpp  ReferenceTypeConformanceCodeGen.h  SchemaGetPrimCodeGen.cpp  SchemaGetPrimCodeGen.h  SdfValueTypeNamesMembersCodeGen.cpp  SdfValueTypeNamesMembersCodeGen.h  SendableCodeGen.cpp  SendableCodeGen.h  StaticTokensCodeGen.cpp  StaticTokensCodeGen.h  SwiftSubclassCxxCodeGen.cpp  SwiftSubclassCxxCodeGen.h  TfNoticeProtocolCodeGen.cpp  TfNoticeProtocolCodeGen.h
source/Driver/: Driver.cpp  Driver.h  main.cpp
source/Util/: CMakeParser.cpp  CMakeParser.h  ClangToolHelper.cpp  ClangToolHelper.h  FileSystemInfo.cpp  FileSystemInfo.h  FileWriterHelper.cpp  FileWriterHelper.h  Graph.cpp  Graph.h  TestDataLoader.cpp  TestDataLoader.h
